--- a/client/extension-online/rembr-ext.html
+++ b/client/extension-online/rembr-ext.html
@@ -7,6 +7,8 @@
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/journal/bootstrap.min.css"/>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/core.js"></script> -->
+
     <link rel="stylesheet" href="ext.css"/>
     <title>Rembr</title>
   </head>
@@ -26,10 +28,10 @@
             <div class="form-group">
               <label class="control-label col-sm-2" for="tags">Tags</label>
               <div class="col-sm-10"> 
-                <select id="tags" class="form-control">
+                <select id="tags" name="tags" class="form-control">
                     <option value="Choose" disabled selected>Choose one</option>
                     <option value="Tech">Tech</option>
-                    <option value="PD">Personal Development</option>
+                    <option value="Personal Development">Personal Development</option>
                     <option value="Politics">Politics</option>
                     <option value="Design">Design</option>
                     <option value="Productivity">Productivity</option>
@@ -37,14 +39,24 @@
                 </select>
               </div>
             </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="note">Note:</label>
+                <div class="col-sm-10">
+                  <textarea class="form-control" id="note">
+                  </textarea>
+                </div>
+              </div>
             <div class="form-group"> 
               <div class="col-sm-offset-2 col-sm-10">
                   <!-- date: new Date(Date.now()) -->
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" id="submit-article" class="btn btn-default">Submit</button>
               </div>
             </div>
           </form>
     </div>
+    <script src="jquery.js"></script>
+    <script src="content-script.js"></script>
+    
   </body>
 </html>
 
