Adding OAuth authorization and google API verification meta tag

--- a/client/extension-online/rembr-ext.html
+++ b/client/extension-online/rembr-ext.html
@@ -55,8 +55,8 @@
           </form>
     </div>
     <script src="jquery.js"></script>
+    <script src="/oauth2/oauth2.js"></script>
     <script src="content-script.js"></script>
-    
   </body>
 </html>
 
