--- a/client/extension-online/rembr-ext.html
+++ b/client/extension-online/rembr-ext.html
@@ -49,7 +49,17 @@
                   <!-- date: new Date(Date.now()) -->
                 <button type="submit" id="submit-article" class="btn btn-default">Submit</button>
               </div>
+              <div class=" col-sm-10">
+                <!-- date: new Date(Date.now()) -->
+              <button id="logout" class="btn btn-default">Log out</button>
             </div>
+            <div class=" col-sm-10">
+              <!-- date: new Date(Date.now()) -->
+            <button id="getTabs" class="btn btn-default">All tabs</button>
+          </div>
+            
+            </div>
+            <div id="tabsDiv"></div>
           </form>
     </div>
     <script src="jquery.js"></script>
