Added indico package and API, removed tags in favor for indico api text-tags,  finished the log out button functionality in the chrome extension

--- a/client/extension-online/rembr-ext.html
+++ b/client/extension-online/rembr-ext.html
@@ -23,7 +23,7 @@
               </div>
             </div>
             <!-- grab url from current tab -->
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label class="control-label col-sm-2" for="tags">Tags</label>
               <div class="col-sm-10"> 
                 <select id="tags" name="tags" class="form-control">
@@ -36,7 +36,7 @@
                     <option value="Other">Other</option>
                 </select>
               </div>
-            </div>
+            </div> -->
             <div class="form-group">
                 <label class="control-label col-sm-2" for="note">Note:</label>
                 <div class="col-sm-10">
