--- a/client/extension-online/rembr-ext.html
+++ b/client/extension-online/rembr-ext.html
@@ -1,70 +1,55 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/journal/bootstrap.min.css"/>
-    <link rel="stylesheet" href="ext.css"/>
-    <title>Rembr</title>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div>
-        <form id="ext-form"  class="form-horizontal" action="/submit-article">
-            <div class="form-group">
-              <label class="control-label col-sm-2" for="title">Title:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="title" placeholder="You choose, this is how you'll organize your articles!">
-              </div>
-            </div>
-            <!-- grab url from current tab -->
-            <!-- <div class="form-group">
-              <label class="control-label col-sm-2" for="tags">Tags</label>
-              <div class="col-sm-10"> 
-                <select id="tags" name="tags" class="form-control">
-                    <option value="Choose" disabled selected>Choose one</option>
-                    <option value="Tech">Tech</option>
-                    <option value="Personal Development">Personal Development</option>
-                    <option value="Politics">Politics</option>
-                    <option value="Design">Design</option>
-                    <option value="Productivity">Productivity</option>
-                    <option value="Other">Other</option>
-                </select>
-              </div>
-            </div> -->
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="note">Note:</label>
-                <div class="col-sm-10">
-                  <textarea class="form-control" id="note">
-                  </textarea>
-                </div>
-              </div>
-            <div class="form-group"> 
-              <div class="col-sm-offset-2 col-sm-10">
-                  <!-- date: new Date(Date.now()) -->
-                <button type="submit" id="submit-article" class="btn btn-default">Submit</button>
-              </div>
-              <div class=" col-sm-10">
-                <!-- date: new Date(Date.now()) -->
-              <button id="logout" class="btn btn-default">Log out</button>
-            </div>
-            <div class=" col-sm-10">
-              <!-- date: new Date(Date.now()) -->
-            <button id="getTabs" class="btn btn-default">All tabs</button>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/journal/bootstrap.min.css" />
+  <link rel="stylesheet" href="ext.css" />
+  <title>Rembr</title>
+</head>
+
+<body>
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div>
+    <form id="ext-form" class="form-horizontal" action="/submit-article">
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="title">Title:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="title" placeholder="You choose, this is how you'll organize your articles!">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="note">Note:</label>
+        <div class="col-sm-10">
+          <textarea class="form-control" id="note">
+          </textarea>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" id="submit-article" class="btn btn-success">Submit</button>
+        </div>
+        <div class=" col-sm-10">
+            <button id="getTabs" class="btn btn-info">All tabs</button>
           </div>
-            
-            </div>
-            <div id="tabsDiv"></div>
-          </form>
-    </div>
-    <script src="jquery.js"></script>
-    <script src="content-script.js"></script>
-  </body>
+        <div class=" col-sm-10">
+          <button id="logout" class="btn btn-danger">Log out</button>
+        </div>
+
+      </div>
+      <div id="tabsDiv"></div>
+    </form>
+  </div>
+  <script src="jquery.js"></script>
+  <script src="content-script.js"></script>
+</body>
+
 </html>
 
 
