--- a/client/extension-online/rembr-ext.html
+++ b/client/extension-online/rembr-ext.html
@@ -30,18 +30,18 @@
           </textarea>
         </div>
       </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" id="submit-article" class="btn btn-success">Submit</button>
+      <div class="row buttons">
+        <div class="col-xs-4">
+            <button type="submit" id="submit-article" class="btn btn-success">Submit</button>
         </div>
-        <div class=" col-sm-10">
-          <button id="getTabs" class="btn btn-info">All tabs</button>
+        <div class="col-xs-4">   
+            <button id="getTabs" class="btn btn-info">All tabs</button>
         </div>
-        <div class=" col-sm-10">
-          <button id="logout" class="btn btn-danger">Log out</button>
+        <div class="col-xs-4">   
+            <button id="logout" class="btn btn-danger">Log out</button>
         </div>
+    </div>
 
-      </div>
       <div id="tabsDiv"></div>
     </form>
   </div>
