--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta name="google-site-verification" content="n3a0nFq8Vu1mxt-0r8d8KN7pr6-wLytPid8TNLGAhPs" />
-    <!-- <meta http-equiv="Content-Security-Policy" content="style-src 'data:font/woff'"> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/rembr-favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/journal/bootstrap.min.css"/>
     <title>Rembr</title>
   </head>
